--- a/Ubuntu.16.04.LTS.x64/ansible.cfg
+++ b/Ubuntu.16.04.LTS.x64/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 host_key_checking = False
 retry_files_enabled = False
-remote_user = ec2-user
+remote_user = ubuntu
 private_key_file = /home/jtimon/Documents/carloscornejo-test.pem
 inventory = inventory/hosts
