--- a/Ubuntu.16.04.LTS.x64/roles/docker/tasks/main.yml
+++ b/Ubuntu.16.04.LTS.x64/roles/docker/tasks/main.yml
@@ -71,13 +71,10 @@
       update_cache=yes
 
 - name: add user to docker group
-  user: name=ubuntu groups=docker append=yes
+  user: name=$USER groups=docker append=yes
 
-- name: Docker Compose Install
+- name: Ensure docker-compose is installed and available
   get_url:
-   url: https://github.com/docker/compose/releases/download/1.8.1/docker-compose-`uname -s`-`uname -m`
-   dest: /usr/local/bin/docker-compose
-
-- name: Docker Compose chmod
-  file: path=/usr/local/bin/docker-compose mode="u+x"
-
+      url : https://github.com/docker/compose/releases/download/1.8.0/docker-compose-{{ ansible_system }}-{{ ansible_userspace_architecture }}
+      dest: /usr/local/bin/docker-compose
+      mode: 'u+x,g+x'
