Adding stuff before delete

--- a/Ubuntu.16.04.LTS.x64/ansible.cfg
+++ b/Ubuntu.16.04.LTS.x64/ansible.cfg
@@ -2,5 +2,6 @@
 host_key_checking = False
 retry_files_enabled = False
 remote_user = ubuntu
-private_key_file = /home/jtimon/Documents/carloscornejo-test.pem
+#private_key_file = /home/elliot/Documents/demo-atsistemas.pem
+private_key_file = /home/elliot/Dropbox/enmilocalfunciona-terraform-key.pem
 inventory = inventory/hosts
